changes/4.9/2765262f7b005a11d6c7abb3c06ea9fdd09712bd
cris: fix Kconfig mismatch when building with CONFIG_PCI

I/O port access. Normally there is no I/O space on CRIS but when
Cardbus/PCI is enabled the request is passed through the bridge.

lib/pci_iomap.c: In function ‘pci_iomap_range’:
lib/pci_iomap.c:43:3: error: implicit declaration of function ‘ioport_map’ [-Werror=implicit-function-declaration]
   return __pci_ioport_map(dev, start, len);
   ^

Signed-off-by: Niklas Cassel <nks@flawful.org>
Signed-off-by: Jesper Nilsson <jespern@axis.com>

